terraform/main.tf
# Key Pair
resource "aws_key_pair" "deployer" {
  key_name   = var.key_name
  public_key = file("C:/Users/hp/.ssh/id_ed25519.pub")
}

# Security Group
resource "aws_security_group" "k8s_sg" {
  name        = "${var.project_name}-sg"
  description = "Security group for k8s cluster"

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Kubernetes API Server
  ingress {
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Frontend React via Nginx
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
   }

  # Backend FastAPI
  ingress {
    from_port   = 7860
    to_port     = 7860
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
   }

  # Communication interne entre nodes
  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  # Accès internet sortant (pull images Docker Hub)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Master Node
resource "aws_instance" "master" {
  ami                    = "ami-0d1b55a6d77a0c326" # Amazon Linux 2 us-east-1
  instance_type          = var.instance_type
  key_name               = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.k8s_sg.id]

  tags = {
    Name = "${var.project_name}-master"
    Role = "master"
  }
}

# Worker Node
resource "aws_instance" "worker" {
  ami                    = "ami-0d1b55a6d77a0c326"
  instance_type          = var.instance_type
  key_name               = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.k8s_sg.id]

  tags = {
    Name = "${var.project_name}-worker"
    Role = "worker"
  }
}
